--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<nav>
 					<ul>
-						<li><a href="#menu">Menu</a></li>
+						<li><a href="#meu">Menu</a></li>
 					</ul>
 				</nav>
 			</header>
